--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
 
 
           <!-- happy clients  -->
-          <section>
-              <h3 class="text-5xl mb-12 font-semibold text-center">Happy Clients says</h3>
+          <section class="my-24">
+              <h3 class="text-5xl mb-12 font-semibold text-center">Happy <span class="text-bike-primary">Clients Says</span></h3>
           </section>
       </main>
 
