--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
           <section class="my-24">
              <h3 class="text-5xl mb-12 font-semibold text-center">Frequently Asked <span class="text-bike-primary">Questions</span></h3>
 
-             <div class="hero min-h-screen ">
+             <div class="hero">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
                     <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
                     <div>
@@ -357,15 +357,15 @@
         </section>
       </main>
 
-      <footer class="footer p-10 bg-neutral text-neutral-content">
-        <div>
+      <footer class="footer justify-around p-10 bg-neutral text-neutral-content">
+        <div class="mt-12">
             <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
         </div> 
         <div>
             <span class="footer-title">Social</span> 
-            <div class="grid grid-flow-col gap-4">
-            <a></a> 
-            <a></a> 
+            <div class="grid grid-cols-1 gap-4">
+            <a><img class="w-36" src="images/others/android.png" alt=""></a> 
+            <a><img class="w-36" src="images/others/ios.png" alt=""></a> 
         </div>
     </footer>
 
