--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
 
                     <div class="flex-1">
-                       <img src="/images/slider/bike1.png" class="w-[400px]"/>
+                       <img src="images/slider/bike1.png" class="w-[400px]"/>
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -116,7 +116,7 @@
                     </div>
 
                     <div class="flex-1">
-                       <img src="/images/slider/bike2.png" class="w-[400px]"/>
+                       <img src="images/slider/bike2.png" class="w-[400px]"/>
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -142,7 +142,7 @@
                     </div>
 
                     <div class="flex-1">
-                       <img src="/images/slider/bike3.png" class="w-[400px]"/>
+                       <img src="images/slider/bike3.png" class="w-[400px]"/>
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -166,7 +166,7 @@
                     </div>
 
                     <div class="flex-1">
-                       <img src="/images/slider/bike4.png" class="w-[400px]"/>
+                       <img src="images/slider/bike4.png" class="w-[400px]"/>
                     </div>
                 </div>
                 <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -185,7 +185,7 @@
              <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                <!-- first card  -->
                <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
                   <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -197,7 +197,7 @@
 
                <!-- second card  -->
                <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
                   <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -209,7 +209,7 @@
 
                <!-- third card  -->
                <div class="card bg-base-100 shadow-xl">
-                    <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img src="images/others/latest3.png" alt="Shoes" /></figure>
                   <div class="card-body">
                         <h2 class="card-title text-3xl">Ducati XDIAVEL S-73!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -309,7 +309,7 @@
 
              <div class="hero">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-                    <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                    <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
                     <div>
                        <!-- first question  -->
                        <div class="collapse collapse-arrow ">
