--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                  <!-- first review  -->
                  <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how 
                             many more days you need 
@@ -253,7 +253,7 @@
 
                   <!-- second review  -->
                  <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how 
                             many more days you need 
@@ -278,7 +278,7 @@
 
                   <!-- third review  -->
                  <div class="card bg-base-100 p-9 border border-gray-400">
-                    <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how 
                             many more days you need 
